# remote-shutdown-rs

./: Cargo.toml  LICENSE  README.md  Rocket.toml
src/: main.rs
