[package]
name = "remote-shutdown"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"


[dependencies]
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
rocket = { version =  "0.5.0" }
gtk = { version = "0.8.2", package = "gtk4" }
log = "0.4.21"
async-channel = "2.3.1"
xdg = "2.5.2"
